[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathao"
dynamic = ["version", "description", "readme", "license", "authors", "keywords", "classifiers", "requires-python", "dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://github.com/yourusername/pathao-python"
Documentation = "https://pathao-python.readthedocs.io"
Repository = "https://github.com/yourusername/pathao-python.git"
"Bug Tracker" = "https://github.com/yourusername/pathao-python/issues"

[tool.setuptools.dynamic]
version = {attr = "pathao.__version__"}
description = {file = ["README.md"]}
readme = {file = "README.md", content-type = "text/markdown"}